src/HTML/gen/HTMLParser.java
// Generated from C:/Users/Omran/Documents/IntelliJ/Compiler/OmranProject/src/HTML/gen/HTMLParser.g4 by ANTLR 4.13.2
package HTML.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		This=1, Of=2, Let=3, Index=4, NUMBER=5, DoubleLeftCurlyBrace=6, DoubleRightCurlyBrace=7, 
		HTMLOpenTag=8, HTMLCloseTag=9, HTMLSelfCloseTag=10, HTMLComment=11, StartHTMLComment=12, 
		EndHTMLComment=13, GreaterOrEqual=14, LessOrEqual=15, ConditionalEqual=16, 
		ConditionalNotEqual=17, StrongConditionalEqual=18, StrongConditionalNotEqual=19, 
		AndOperator=20, OrOperator=21, String=22, Number=23, Boolean=24, Any=25, 
		Void=26, Sign=27, True=28, False=29, ElementName=30, AttributeName=31, 
		NgFor=32, NgIf=33, EventClick=34, EventFocus=35, DIGIT=36, WORD=37, Slash=38, 
		BackSlash=39, Equal=40, Star=41, Dash=42, Plus=43, Backtick=44, Dot=45, 
		Comma=46, Colon=47, SemiColon=48, AtSign=49, Ampersand=50, Pipe=51, ExclamationMark=52, 
		QuestionMark=53, LeftAngleBracket=54, RightAngleBracket=55, LeftParenthesis=56, 
		RightParenthesis=57, LeftCurlyBrace=58, RightCurlyBrace=59, LeftSquareBracket=60, 
		RightSquareBracket=61, SingleQuotation=62, DoubleQuotation=63, WhiteSpace=64, 
		NewLine=65, CONTENT=66, COMMENT=67;
	public static final int
		RULE_htmlTag = 0, RULE_tag = 1, RULE_regularTag = 2, RULE_openTag = 3, 
		RULE_closeTag = 4, RULE_selfClosedTag = 5, RULE_htmlContent = 6, RULE_content = 7, 
		RULE_htmlAttribute = 8, RULE_attributeValue = 9, RULE_ngAttribute = 10, 
		RULE_ngIf = 11, RULE_ngFor = 12, RULE_forStatment = 13, RULE_variableDeclaration = 14, 
		RULE_eventAttribute = 15, RULE_attributeName = 16, RULE_interpolation = 17, 
		RULE_conditions = 18, RULE_condition = 19, RULE_statement = 20, RULE_combiningOperator = 21, 
		RULE_conditionalOperator = 22, RULE_dataAccessing = 23, RULE_functionAccessing = 24, 
		RULE_variableAccessing = 25, RULE_chaining = 26, RULE_identifier = 27, 
		RULE_propertyAccessing = 28, RULE_functionCall = 29, RULE_arrayElementAccessing = 30, 
		RULE_parameters = 31, RULE_parameter = 32, RULE_value = 33, RULE_string = 34, 
		RULE_number = 35, RULE_boolean = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"htmlTag", "tag", "regularTag", "openTag", "closeTag", "selfClosedTag", 
			"htmlContent", "content", "htmlAttribute", "attributeValue", "ngAttribute", 
			"ngIf", "ngFor", "forStatment", "variableDeclaration", "eventAttribute", 
			"attributeName", "interpolation", "conditions", "condition", "statement", 
			"combiningOperator", "conditionalOperator", "dataAccessing", "functionAccessing", 
			"variableAccessing", "chaining", "identifier", "propertyAccessing", "functionCall", 
			"arrayElementAccessing", "parameters", "parameter", "value", "string", 
			"number", "boolean"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'this'", "'of'", "'let'", "'index'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'string'", "'number'", "'boolean'", "'any'", "'void'", null, "'true'", 
			"'false'", null, null, "'ngFor'", "'ngIf'", "'click'", "'focus'", null, 
			null, "'/'", "'\\'", "'='", "'*'", "'-'", "'+'", "'`'", "'.'", "','", 
			"':'", "';'", "'@'", "'&'", "'|'", "'!'", "'?'", "'<'", "'>'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'", "'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "This", "Of", "Let", "Index", "NUMBER", "DoubleLeftCurlyBrace", 
			"DoubleRightCurlyBrace", "HTMLOpenTag", "HTMLCloseTag", "HTMLSelfCloseTag", 
			"HTMLComment", "StartHTMLComment", "EndHTMLComment", "GreaterOrEqual", 
			"LessOrEqual", "ConditionalEqual", "ConditionalNotEqual", "StrongConditionalEqual", 
			"StrongConditionalNotEqual", "AndOperator", "OrOperator", "String", "Number", 
			"Boolean", "Any", "Void", "Sign", "True", "False", "ElementName", "AttributeName", 
			"NgFor", "NgIf", "EventClick", "EventFocus", "DIGIT", "WORD", "Slash", 
			"BackSlash", "Equal", "Star", "Dash", "Plus", "Backtick", "Dot", "Comma", 
			"Colon", "SemiColon", "AtSign", "Ampersand", "Pipe", "ExclamationMark", 
			"QuestionMark", "LeftAngleBracket", "RightAngleBracket", "LeftParenthesis", 
			"RightParenthesis", "LeftCurlyBrace", "RightCurlyBrace", "LeftSquareBracket", 
			"RightSquareBracket", "SingleQuotation", "DoubleQuotation", "WhiteSpace", 
			"NewLine", "CONTENT", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlTagContext extends ParserRuleContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public List<TerminalNode> WhiteSpace() { return getTokens(HTMLParser.WhiteSpace); }
		public TerminalNode WhiteSpace(int i) {
			return getToken(HTMLParser.WhiteSpace, i);
		}
		public HtmlTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHtmlTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHtmlTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHtmlTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlTagContext htmlTag() throws RecognitionException {
		HtmlTagContext _localctx = new HtmlTagContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_htmlTag);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WhiteSpace) {
				{
				{
				setState(74);
				match(WhiteSpace);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			tag();
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					match(WhiteSpace);
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TagContext extends ParserRuleContext {
		public RegularTagContext regularTag() {
			return getRuleContext(RegularTagContext.class,0);
		}
		public SelfClosedTagContext selfClosedTag() {
			return getRuleContext(SelfClosedTagContext.class,0);
		}
		public TagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagContext tag() throws RecognitionException {
		TagContext _localctx = new TagContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tag);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				regularTag();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				selfClosedTag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegularTagContext extends ParserRuleContext {
		public OpenTagContext openTag() {
			return getRuleContext(OpenTagContext.class,0);
		}
		public HtmlContentContext htmlContent() {
			return getRuleContext(HtmlContentContext.class,0);
		}
		public CloseTagContext closeTag() {
			return getRuleContext(CloseTagContext.class,0);
		}
		public List<TerminalNode> WhiteSpace() { return getTokens(HTMLParser.WhiteSpace); }
		public TerminalNode WhiteSpace(int i) {
			return getToken(HTMLParser.WhiteSpace, i);
		}
		public RegularTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regularTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterRegularTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitRegularTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitRegularTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegularTagContext regularTag() throws RecognitionException {
		RegularTagContext _localctx = new RegularTagContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regularTag);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			openTag();
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					match(WhiteSpace);
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(98);
			htmlContent();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WhiteSpace) {
				{
				{
				setState(99);
				match(WhiteSpace);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			closeTag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpenTagContext extends ParserRuleContext {
		public TerminalNode HTMLOpenTag() { return getToken(HTMLParser.HTMLOpenTag, 0); }
		public TerminalNode RightAngleBracket() { return getToken(HTMLParser.RightAngleBracket, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public List<NgAttributeContext> ngAttribute() {
			return getRuleContexts(NgAttributeContext.class);
		}
		public NgAttributeContext ngAttribute(int i) {
			return getRuleContext(NgAttributeContext.class,i);
		}
		public List<EventAttributeContext> eventAttribute() {
			return getRuleContexts(EventAttributeContext.class);
		}
		public EventAttributeContext eventAttribute(int i) {
			return getRuleContext(EventAttributeContext.class,i);
		}
		public List<TerminalNode> WhiteSpace() { return getTokens(HTMLParser.WhiteSpace); }
		public TerminalNode WhiteSpace(int i) {
			return getToken(HTMLParser.WhiteSpace, i);
		}
		public OpenTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterOpenTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitOpenTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitOpenTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpenTagContext openTag() throws RecognitionException {
		OpenTagContext _localctx = new OpenTagContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_openTag);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(HTMLOpenTag);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(111);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(108);
						htmlAttribute();
						}
						break;
					case 2:
						{
						setState(109);
						ngAttribute();
						}
						break;
					case 3:
						{
						setState(110);
						eventAttribute();
						}
						break;
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WhiteSpace) {
				{
				{
				setState(116);
				match(WhiteSpace);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(RightAngleBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CloseTagContext extends ParserRuleContext {
		public TerminalNode HTMLCloseTag() { return getToken(HTMLParser.HTMLCloseTag, 0); }
		public TerminalNode RightAngleBracket() { return getToken(HTMLParser.RightAngleBracket, 0); }
		public List<TerminalNode> WhiteSpace() { return getTokens(HTMLParser.WhiteSpace); }
		public TerminalNode WhiteSpace(int i) {
			return getToken(HTMLParser.WhiteSpace, i);
		}
		public CloseTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closeTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterCloseTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitCloseTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitCloseTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CloseTagContext closeTag() throws RecognitionException {
		CloseTagContext _localctx = new CloseTagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_closeTag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(HTMLCloseTag);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WhiteSpace) {
				{
				{
				setState(125);
				match(WhiteSpace);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(RightAngleBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosedTagContext extends ParserRuleContext {
		public TerminalNode HTMLOpenTag() { return getToken(HTMLParser.HTMLOpenTag, 0); }
		public TerminalNode HTMLSelfCloseTag() { return getToken(HTMLParser.HTMLSelfCloseTag, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public List<NgAttributeContext> ngAttribute() {
			return getRuleContexts(NgAttributeContext.class);
		}
		public NgAttributeContext ngAttribute(int i) {
			return getRuleContext(NgAttributeContext.class,i);
		}
		public List<EventAttributeContext> eventAttribute() {
			return getRuleContexts(EventAttributeContext.class);
		}
		public EventAttributeContext eventAttribute(int i) {
			return getRuleContext(EventAttributeContext.class,i);
		}
		public List<TerminalNode> WhiteSpace() { return getTokens(HTMLParser.WhiteSpace); }
		public TerminalNode WhiteSpace(int i) {
			return getToken(HTMLParser.WhiteSpace, i);
		}
		public SelfClosedTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selfClosedTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSelfClosedTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSelfClosedTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSelfClosedTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelfClosedTagContext selfClosedTag() throws RecognitionException {
		SelfClosedTagContext _localctx = new SelfClosedTagContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selfClosedTag);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(HTMLOpenTag);
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(137);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(134);
						htmlAttribute();
						}
						break;
					case 2:
						{
						setState(135);
						ngAttribute();
						}
						break;
					case 3:
						{
						setState(136);
						eventAttribute();
						}
						break;
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WhiteSpace) {
				{
				{
				setState(142);
				match(WhiteSpace);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(HTMLSelfCloseTag);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContentContext extends ParserRuleContext {
		public List<HtmlTagContext> htmlTag() {
			return getRuleContexts(HtmlTagContext.class);
		}
		public HtmlTagContext htmlTag(int i) {
			return getRuleContext(HtmlTagContext.class,i);
		}
		public List<InterpolationContext> interpolation() {
			return getRuleContexts(InterpolationContext.class);
		}
		public InterpolationContext interpolation(int i) {
			return getRuleContext(InterpolationContext.class,i);
		}
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public HtmlContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHtmlContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHtmlContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHtmlContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlContentContext htmlContent() throws RecognitionException {
		HtmlContentContext _localctx = new HtmlContentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_htmlContent);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(153);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						setState(150);
						htmlTag();
						}
						break;
					case 2:
						{
						setState(151);
						interpolation();
						}
						break;
					case 3:
						{
						setState(152);
						content();
						}
						break;
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public List<TerminalNode> WhiteSpace() { return getTokens(HTMLParser.WhiteSpace); }
		public TerminalNode WhiteSpace(int i) {
			return getToken(HTMLParser.WhiteSpace, i);
		}
		public List<TerminalNode> CONTENT() { return getTokens(HTMLParser.CONTENT); }
		public TerminalNode CONTENT(int i) {
			return getToken(HTMLParser.CONTENT, i);
		}
		public List<TerminalNode> WORD() { return getTokens(HTMLParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(HTMLParser.WORD, i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_content);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(159); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(158);
					_la = _input.LA(1);
					if ( !(((((_la - 37)) & ~0x3f) == 0 && ((1L << (_la - 37)) & 671088641L) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(161); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
